# pipeline-mhqa-dspy

./: README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  reset.sh
.dvc/: config
data/: .gitignore  raw.dvc
nbs/: agentic.ipynb  debug.ipynb  explore.ipynb  hotpotqa-bootstrap.json  hotpotqa-cte-failure-analysis.ipynb  hotpotqa-cte-inspect.ipynb  hotpotqa-train.ipynb  hotpotqa-train.json  hotpotqa.ipynb  hotpotqa.json  musique-temperature-sweep-1.json  musique-temperature-sweep.ipynb  musique.ipynb  musique.json
nbs/drop-mini/: exps.jsonl  inspect.ipynb  preprocess.ipynb  run.sh  setup.ipynb
nbs/frames-mini/: exps.jsonl  preprocess.ipynb  run.sh  setup.ipynb
nbs/musique-final/: prepare.ipynb  preprocess.ipynb  results.jsonl  run.sh  setup.ipynb  statistical-analysis.ipynb
nbs/musique-sweep/: exps.jsonl  preprocess.ipynb  results.jsonl  run.sh  setup.ipynb
nbs/musique-temperature-sweep/: prepare.ipynb  results.jsonl  statistical-analysis.ipynb
src/mhqa/: agent.py  dvc.py  evaluation.py  models.py  multihop.py  musique.py  predict.py  qa.py  react.py  search.py  tgi_json_adapter.py  utils.py
src/mhqa/dataset/: drop.py
