[project]
name = "mhqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bellem",
    "datasets>=3.2.0",
    "dspy>=2.6.2",
    "dvc>=3.59.0",
    "dvc-s3>=3.2.0",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rerankers[transformers]>=0.6.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.uv.sources]
bellem = { path = "../bellem", editable = true }

